# credit_score

./: .gitignore  .nojekyll  LICENSE  README.md  index.html  llms-full.txt  llms.txt  pyproject.toml  references.html  robots.txt  sitemap.xml
appendices/: A-math-prereqs.html  B-env-setup.html  C-datasets.html
book/: _quarto.yml  index.qmd  llms-full.txt  references.bib  styles-dark.scss  styles.scss
book/.well-known/: ai.txt
book/_includes/: json-ld.html  mermaid-panzoom.html
book/appendices/: A-math-prereqs.qmd  B-env-setup.qmd  C-datasets.qmd
book/chapters/: 01-introduction.qmd  02-formal-setup.qmd  03-data.qmd  04-metrics.qmd  05-regulation.qmd  06-discriminant-analysis.qmd  07-logistic-scorecard.qmd  08-structural-models.qmd  09-survival-analysis.qmd  10-reject-inference.qmd  11-trees-rules.qmd  12-ensembles.qmd  13-svm.qmd  14-neural-networks.qmd  15-imbalanced.qmd  16-benchmarking.qmd  17-digital-footprints.qmd  18-open-banking.qmd  19-p2p-lending.qmd  20-bigtech-credit.qmd  21-xai.qmd  22-shap-practice.qmd  22b-xper-performance.qmd  22c-deep-xai.qmd  22d-conformal-uncertainty.qmd  (+15 more)
chapters/: 01-introduction.html  02-formal-setup.html  03-data.html  04-metrics.html  05-regulation.html  06-discriminant-analysis.html  07-logistic-scorecard.html  08-structural-models.html  09-survival-analysis.html  10-reject-inference.html  11-trees-rules.html  12-ensembles.html  13-svm.html  14-neural-networks.html  15-imbalanced.html  16-benchmarking.html  17-digital-footprints.html  18-open-banking.html  19-p2p-lending.html  20-bigtech-credit.html  21-xai.html  22-shap-practice.html  22b-xper-performance.html  22c-deep-xai.html  22d-conformal-uncertainty.html  22e-explanation-quality.html  23-fairness-theory.html  24-fairness-empirical.html  25-nlp-text.html  26-llm-credit.html  27-gnn-credit.html  28-causal-credit.html  29-corporate-sme.html  30-mortgage.html  31-inclusion-emerging.html  32-dynamic-behavioral.html  33-future.html  34-mlops-deployment.html  34b-vendor-onboarding-backtest.html  35-ifrs9-cecl-stress.html
deployment/: reject_inference_app.py
(+122 files in other folders)
