[project]
name = "credit-scoring-book"
version = "0.1.0"
description = "Credit Scoring: Theory, Methods, and Practice. An executable book."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Credit Scoring Book Authors" }]

dependencies = [
  # Core numerics
  "numpy>=1.26,<3",
  "pandas>=2.2",
  "polars>=1.8",
  "pyarrow>=17",
  "scipy>=1.13",
  # Classical ML
  "scikit-learn>=1.5",
  "statsmodels>=0.14",
  "patsy>=1.0",
  # Gradient boosting
  "xgboost>=2.1",
  "lightgbm>=4.5",
  "catboost>=1.2.7",
  # Deep learning (CPU-friendly)
  "torch>=2.4",
  "pytorch-tabnet>=4.1",
  # Survival analysis
  "lifelines>=0.29",
  "scikit-survival>=0.23",
  # Imbalanced learning
  "imbalanced-learn>=0.12",
  # Explainability
  "shap>=0.46",
  "lime>=0.2.0.1",
  "dice-ml>=0.11",
  # Fairness
  "fairlearn>=0.11",
  "aif360>=0.6",
  # Credit-specific
  "optbinning>=0.20",
  "scorecardpy>=0.1.9.6",
  "Boruta>=0.4.3",
  "hmeasure>=0.1.6",
  # NLP / LLM
  "transformers>=4.45",
  "sentencepiece>=0.2",
  "tokenizers>=0.20",
  "datasets>=3.0",
  "peft>=0.13",
  "accelerate>=1.0",
  # Graphs
  "networkx>=3.3",
  "torch-geometric>=2.6",
  # Causal
  "econml>=0.15",
  "dowhy>=0.12",
  "linearmodels>=6.0",
  # Visualization
  "matplotlib>=3.9",
  "seaborn>=0.13",
  "plotly>=5.24",
  # Big data / scalability
  "dask[complete]>=2024.9",
  "pyspark>=3.5",
  "ray[default]>=2.37",
  # MLOps / deployment
  "mlflow>=2.17",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "joblib>=1.4",
  "onnx>=1.17",
  "onnxruntime>=1.19",
  "skl2onnx>=1.17",
  # Utilities / data download
  "requests>=2.32",
  "tqdm>=4.66",
  "openpyxl>=3.1",
  "ucimlrepo>=0.0.7",
  # Quarto kernel
  "jupyter>=1.1",
  "ipykernel>=6.29",
  "nbformat>=5.10",
  "xlrd>=2.0.2",
  "xper>=0.0.89",
  "jupyter-cache>=1.0.1",
  "ruptures>=1.1.10",
  "sentence-transformers>=5.4.1",
  "pulp>=3.3.0",
  "cvxpy>=1.8.2",
]

[tool.uv]
package = false
